--- a/linear equation.html
+++ b/linear equation.html
@@ -4,43 +4,16 @@
 function calculate()
 {
 
-var n =parseFloat(document.getElementById("n").value);
-var r =parseFloat(document.getElementById("r").value);
+var a =parseFloat(document.getElementById("a").value);
 
-if(n<0 || r<0){
-                 document.getElementById("warning").innerHTML = "Please enter a positive value.......";
-               }
-   if(n>=0 && r>0){
-                   document.getElementById("warning").innerHTML = "";
-                   }
+var b =parseFloat(document.getElementById("b").value);
 
-				   // find n !
-				   var factorial1 = 1;
-//recursive function
-for(i=1;i<=n;i++){
-factorial1 = factorial1 * i;
-}
+var c =parseFloat(document.getElementById("c").value);
 
-				   // find r !
-				   var factorial2 = 1;
-//recursive function
-for(i=1;i<=r;i++){
-factorial2 = factorial2 * i;
-}
+var x = (c-b)/a;
 
 
-				   // find (n-r) !
-				   var factorial3 = 1;
-//recursive function
-for(i=1;i<=n-r;i++){
-factorial3 = factorial3 * i;
-}
-
-var p = factorial1/factorial3;
-var c = factorial1/(factorial2*factorial3);
-
-document.getElementById('p').value = p;
-document.getElementById('c').value = c;
+document.getElementById('x').value = x;
 	
 }
 
@@ -72,31 +45,21 @@ font-size:14pt;
 
 <table border="0" align="center" id="table">
 <tr>
-   <td align="right">N =</td>
-   <td><input id="n" type="number" onchange="calculate()"  ;autofocus /></td>
-</tr>
+   <td align="right"></td>
+   <td><input id="a" type="number" onchange="calculate()"  ;autofocus /></td>
+  
+   <td align="right"> x +</td>
+   <td><input id="b" type="number" onchange="calculate()";/></td>
 
-<tr>
-   <td align="right">r =</td>
-   <td><input id="r" type="number" onchange="calculate()"  ;autofocus /></td>
-</tr>
+      <td align="right"> = </td>
+   <td><input id="c" type="number" onchange="calculate()"  ;autofocus /></td>
 
-
-<tr>
-
-   <td align="right">Permutation =</td>
-   <td><input id="p" type="number" onchange="calculate()";/></td>
-
-</tr>
-
-<tr>
-
-   <td align="right">Combination =</td>
-   <td><input id="c" type="number" onchange="calculate()";/></td>
-
-</tr>
-
-
+   </table>
+   <table border="0" align="center" id="table">
+   <td align="right">Value of x = </td>
+   <td><input id="x" type="number" onchange="calculate()";/></td>
+   
+   </tr>
 </table>
 
 </tr>
