--- a/matrix determinant -2d.html
+++ b/matrix determinant -2d.html
@@ -4,43 +4,23 @@
 function calculate()
 {
 
-var n =parseFloat(document.getElementById("n").value);
-var r =parseFloat(document.getElementById("r").value);
+var a11 =parseFloat(document.getElementById("a11").value);
+var a12 =parseFloat(document.getElementById("a12").value);
 
-if(n<0 || r<0){
-                 document.getElementById("warning").innerHTML = "Please enter a positive value.......";
-               }
-   if(n>=0 && r>0){
-                   document.getElementById("warning").innerHTML = "";
-                   }
-
-				   // find n !
-				   var factorial1 = 1;
-//recursive function
-for(i=1;i<=n;i++){
-factorial1 = factorial1 * i;
-}
-
-				   // find r !
-				   var factorial2 = 1;
-//recursive function
-for(i=1;i<=r;i++){
-factorial2 = factorial2 * i;
-}
+var a21 =parseFloat(document.getElementById("a21").value);
+var a22 =parseFloat(document.getElementById("a22").value);
 
 
-				   // find (n-r) !
-				   var factorial3 = 1;
-//recursive function
-for(i=1;i<=n-r;i++){
-factorial3 = factorial3 * i;
-}
 
-var p = factorial1/factorial3;
-var c = factorial1/(factorial2*factorial3);
 
-document.getElementById('p').value = p;
+
+var c = (a11*a22)-(a21*a12);
+
+
+
 document.getElementById('c').value = c;
+
+
 	
 }
 
@@ -56,7 +36,7 @@ td,p
 input
 {
     font-size:14pt;
-    width:100px;
+    width:80px;
 }
 select,form,option{
 width:100px;
@@ -72,35 +52,59 @@ font-size:14pt;
 
 <table border="0" align="center" id="table">
 <tr>
-   <td align="right">N =</td>
-   <td><input id="n" type="number" onchange="calculate()"  ;autofocus /></td>
+Matrix A
 </tr>
+   </table>
 
+
+<table border="0" align="center" id="table">
 <tr>
-   <td align="right">r =</td>
-   <td><input id="r" type="number" onchange="calculate()"  ;autofocus /></td>
-</tr>
+   <td><input id="a11" type="number" onchange="calculate()"  ;autofocus /></td>
+  
+   <td><input id="a12" type="number" onchange="calculate()";autofocus /></td>
 
-
+   </table>
+  
+<table border="0" align="center" id="table">
 <tr>
+   <td><input id="a21" type="number" onchange="calculate()"  ;autofocus /></td>
+  
+   <td><input id="a22" type="number" onchange="calculate()";autofocus /></td>
 
-   <td align="right">Permutation =</td>
-   <td><input id="p" type="number" onchange="calculate()";/></td>
 
-</tr>
+   </table>
+  
+  
+  
+  
+  
+  
+  
+  
+  
 
+
+ 
+
+
+   <br/>
+  <table>Determinant</table>
+<table border="0" align="center" id="table">
 <tr>
-
-   <td align="right">Combination =</td>
-   <td><input id="c" type="number" onchange="calculate()";/></td>
-
+ <td align="right" class="output" id="unitoutputtable">
+    
+ </td>
+    
+    <td><input id="c" type="number" ;/></td>
+	
 </tr>
 
 
-</table>
-
-</tr>
-</table>
+</table>  
+  
+  
+  
+  
 </tr>
 </body>
 </html><h1>All calculation</h1>
